--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -20,13 +20,18 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
+    "@ionic-native/app-version": "^5.6.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/keychain-touch-id": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "angular2-uuid": "^1.1.1",
+    "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-keychain-touch-id": "3.2.1",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -62,7 +67,9 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-app-version": {},
+      "cordova-plugin-keychain-touch-id": {}
     }
   }
 }
