--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Ionic4",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "survip-mobile",
+  "version": "1.8.0",
+  "author": "CAUSE 9-1-1",
+  "homepage": "http://cause911.ca/",
+  "private": true,
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
     "@ionic-native/app-version": "^5.6.0",
+    "@ionic-native/camera": "^5.6.1",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/keychain-touch-id": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
@@ -29,11 +31,16 @@
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@types/fabric": "^1.5.40",
     "angular2-uuid": "^1.1.1",
+    "canvas": "^1.6.11",
     "cordova-plugin-app-version": "0.1.9",
+    "cordova-plugin-camera": "4.0.3",
     "cordova-plugin-keychain-touch-id": "3.2.1",
     "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
+    "fabric": "^2.3.3",
+    "lib-sketch-tool": "1.7.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.29"
@@ -64,12 +71,13 @@
     "tslint": "~5.16.0",
     "typescript": "~3.1.6"
   },
-  "description": "An Ionic project",
+  "description": "SURVI-Prevention Mobile",
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
       "cordova-plugin-app-version": {},
-      "cordova-plugin-keychain-touch-id": {}
+      "cordova-plugin-keychain-touch-id": {},
+      "cordova-plugin-camera": {}
     }
   }
 }
