--- a/Ionic4/package.json
+++ b/Ionic4/package.json
@@ -26,7 +26,7 @@
     "@ionic-native/keychain-touch-id": "^5.6.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
-    "@ionic/angular": "^4.6.0",
+    "@ionic/angular": "^4.7.0",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
@@ -60,7 +60,7 @@
     "@angular/compiler": "~7.2.2",
     "@angular/compiler-cli": "~7.2.2",
     "@angular/language-service": "~7.2.2",
-    "@ionic/angular-toolkit": "~1.5.1",
+    "@ionic/angular-toolkit": "^2.0.0",
     "@types/fabric": "^1.5.40",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
