--- a/Ionic4/angular.json
+++ b/Ionic4/angular.json
@@ -64,7 +64,11 @@
                   "type": "initial",
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
+                },                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
                 }
+
               ]
             },
             "ci": {
