--- a/src/assets/config/config.json
+++ b/src/assets/config/config.json
@@ -1,5 +1,5 @@
 {
-  "apiUrl":"https://survipreventiondev.cauca.ca/api/",
+  "apiUrl":"https://surviprevention.cauca.ca/api/",
   "hockeyapp": {
     "androidAppId": "YOUR_ANDROID_HOCKEYAPP_ID",
     "iosAppId": "YOUR_IOS_HOCKEYAPP_ID",
