--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@ionic-native/keychain-touch-id": "^5.12.0",
     "@ionic-native/splash-screen": "^5.12.0",
     "@ionic-native/status-bar": "^5.12.0",
-    "@ionic/angular": "^4.12.0-dev.201910221300.d9a4ac8",
+    "@ionic/angular": "^4.11.7",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
